apps/cloudflare/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflare
  labels:
    app.kubernetes.io/component: cloudflare
